--- a/package.json
+++ b/package.json
@@ -1,10 +1,20 @@
 {
   "dependencies": {
+    "@react-navigation/native": "^6.0.6",
+    "@react-navigation/stack": "^6.0.11",
+    "email-validator": "^2.0.4",
     "expo": "~42.0.0",
+    "firebase": "8.2.3",
+    "formik": "^2.2.9",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
-    "react-native-web": "~0.13.12"
+    "react-native-elements": "^3.4.2",
+    "react-native-gesture-handler": "^1.10.3",
+    "react-native-pager-view": "5.0.12",
+    "react-native-web": "~0.13.12",
+    "valid-url": "^1.0.9",
+    "yup": "^0.32.10"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0"
