--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "@react-navigation/stack": "^6.0.11",
     "email-validator": "^2.0.4",
     "expo": "~42.0.0",
+    "expo-status-bar": "~1.0.4",
     "firebase": "8.2.3",
     "formik": "^2.2.9",
     "react": "16.13.1",
